2013-02-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (read_line):  Reset the token count to zero when
	starting to read a new line of input.  Otherwise if the read is 
	interrupted by a mouse event requesting a replot then the internal
	state is not valid.  Test case:   cat | ./gnuplot      plot and zoom
	Bug #3602388

2013-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (bind_command):  Convert the last caller of quote_str()
	in the core code to use instead try_to_get_string().  I.e. allow
	STRING = "some command"
	bind KEY STRING

	* term/ai.trm:  Replace quote_str() with try_to_get_string()
	  Allows font to be provided as a string variable.

	* term/vgagl.trm:  Same
	* term/corel.trm:  Same
	* term/djsvga.trm: Same

	* src/util.h src/util.c:  The routine quote_str() no longer has any
	callers except the next/openstep terminals.  Mark it #ifdef NEXT.

2013-01-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_timefmt):  Accept the new format as a string variable.
	Bug #3602057

2013-01-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c:  Up until now hidden3d handled any pm3d surfaces as
	a collection of points, which did essentially nothing at all.  Now we
	treat them as invisible lines (LT_NODRAW) so that they can occluded
	other objects.
	This trick was already used in hidden2.dem but now it's built in.

2013-01-18  Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm:  Right- or Center- justified enhanced text was losing
	track of the font size.  This bug was evident in "key.dem".

2013-01-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm (EPSLATEX_layer):  Reset current text color at the
	start of each layer's block of TeX output.  Bug #3599916

	* src/term.c (term_apply_lp_properties):  Always apply linetype color,
	even if the flag use_palette in not set.  Many terminals cope with this
	on their own, but not all of them (e.g. cairolatex).
	Bug #3599916
